--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,26 @@
             </div>
             <div class="header__contacts">
                 <a href="tel:74999228974" class="header__phone">+7 (499) 922-89-74</a>
-                <button class="button">
+                <button class="button button_header">
                     заказать звонок
                 </button>
             </div>
         </header>
+        <div class="promo__wrapper">
+            <h1 class="promo__title">Подбор пульсометра</h1>
+            <h2 class="promo__subtitle">с учётом Вашего уровня подготовки</h2>
+            <div class="promo__icons">
+                <div class="promo__icon"><span><img src="img/first-section/timer.png" alt="timer"></span>Время подбора: 10 минут</div>
+                <div class="promo__icon"><span><img src="img/first-section/cart.png" alt="cart.png"></span>Бесплатная доставка</div>
+                <div class="promo__icon"><span><img src="img/first-section/messages.png" alt="messages.png"></span>Ответим на все вопросы</div>
+            </div>
+        <div class="promo__action">
+            <button class="button button_main">
+                заказать звонок
+            </button>
+            <p>или <a href="#" class="promo__link">ПЕРЕЙТИ В КАТАЛОГ</a></p>
+        </div>
+        </div>
     </div>
 
 </section>
