--- a/src/index.html
+++ b/src/index.html
@@ -10,40 +10,43 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-<section class="promo">
-    <div class="container">
-        <header class="header">
-            <a href="#" class="header__logo">
-                <img src="img/first-section/logo.png" alt="logo">
-            </a>
-            <div class="header__official">
-                Официальный представитель <span>Garmin, Polar, Suunto</span>
-            </div>
-            <div class="header__contacts">
-                <a href="tel:74999228974" class="header__phone">+7 (499) 922-89-74</a>
-                <button class="button button_header">
+    <section class="promo">
+        <div class="container">
+            <header class="header">
+                <a href="#" class="header__logo">
+                    <img src="img/first-section/logo.png" alt="logo">
+                </a>
+                <div class="header__official">
+                    Официальный представитель <span>Garmin, Polar, Suunto</span>
+                </div>
+                <div class="header__contacts">
+                    <a href="tel:74999228974" class="header__phone">+7 (499) 922-89-74</a>
+                    <button class="button button_header">
+                        заказать звонок
+                    </button>
+                </div>
+            </header>
+            <div class="promo__wrapper">
+                <h1 class="promo__title">Подбор пульсометра</h1>
+                <h2 class="promo__subtitle">с учётом Вашего уровня подготовки</h2>
+                <div class="promo__icons">
+                    <div class="promo__icon"><span><img src="img/first-section/timer.png" alt="timer"></span>Время подбора: 10 минут</div>
+                    <div class="promo__icon"><span><img src="img/first-section/cart.png" alt="cart.png"></span>Бесплатная доставка</div>
+                    <div class="promo__icon"><span><img src="img/first-section/messages.png" alt="messages.png"></span>Ответим на все вопросы</div>
+                </div>
+            <div class="promo__action">
+                <button class="button button_main">
                     заказать звонок
                 </button>
+                <p>или <a href="#" class="promo__link">ПЕРЕЙТИ В КАТАЛОГ</a></p>
             </div>
-        </header>
-        <div class="promo__wrapper">
-            <h1 class="promo__title">Подбор пульсометра</h1>
-            <h2 class="promo__subtitle">с учётом Вашего уровня подготовки</h2>
-            <div class="promo__icons">
-                <div class="promo__icon"><span><img src="img/first-section/timer.png" alt="timer"></span>Время подбора: 10 минут</div>
-                <div class="promo__icon"><span><img src="img/first-section/cart.png" alt="cart.png"></span>Бесплатная доставка</div>
-                <div class="promo__icon"><span><img src="img/first-section/messages.png" alt="messages.png"></span>Ответим на все вопросы</div>
             </div>
-        <div class="promo__action">
-            <button class="button button_main">
-                заказать звонок
-            </button>
-            <p>или <a href="#" class="promo__link">ПЕРЕЙТИ В КАТАЛОГ</a></p>
         </div>
-        </div>
-    </div>
+    </section>
 
-</section>
+    <section class="advantages">
+        <h2 class="advantages__title">НАШИ ПРЕИМУЩЕСТВА</h2>
+    </section>
 
 
 </body>
