--- a/src/index.html
+++ b/src/index.html
@@ -43,23 +43,22 @@
             </div>
         </div>
     </section>
-
     <section class="advantages">
         <div class="container">
             <h2 class="advantages__title">НАШИ ПРЕИМУЩЕСТВА</h2>
         <div class="advantages__wrapper">
             <div class="advantages__item">
-                <span><img src="img/second-section/cup.png" alt="cup"></span>
+                <span class="advantages_ico"><img src="img/second-section/cup.png" alt="cup"></span>
                 <h3 class="advantages__name">Делимся опытом</h3>
                 Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
             </div>
             <div class="advantages__item">
-                <span><img src="img/second-section/heart.png" alt="heart"></span>
+                <span class="advantages_ico"><img src="img/second-section/heart.png" alt="heart"></span>
                 <h3 class="advantages__name">Заботимся о здоровье</h3>
                 Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
             </div>
             <div class="advantages__item">
-                <span><img src="img/second-section/cup.png" alt="cup"></span>
+                <span class="advantages_ico"><img src="img/second-section/cup.png" alt="cup"></span>
                 <h3 class="advantages__name">Учим бегать</h3>
                 Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в Украине - I LOVE RUNNING.
             </div>
