--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,24 @@
         </div>
         </div>
     </section>
+    <section class="consultation">
+        <div class="container">
+            <h2 class="consultation__title">
+                Получите бесплатную консультацию <br>по подбору пульсометра 
+            </h2>
+            <div class="consultation__desc">
+                Просто заполните форму заявки и мы перезвоним вам в течении 10 минут
+            </div>
+            <form action="#" class="feed-form consultation__feed-form">
+                <input name="name" required placeholder ="Ваше имя" type="text">
+                <input name="phone" required placeholder ="Ваше телефон" type="number">
+                <input name="email  " required placeholder ="Ваше E-mail" type="email">
+                <button class="button button_submit">
+                    заказать кОНСУЛЬТАЦИЮ
+                </button>
+            </form>
+        </div>
+    </section>
 
 
 </body>
