new block (form)

--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
             <div class="consultation__desc">
                 Просто заполните форму заявки и мы перезвоним вам в течении 10 минут
             </div>
-            <form action="#" class="feed-form consultation__feed-form">
+            <form action="#" class="feed-form">
                 <input name="name" required placeholder ="Ваше имя" type="text">
                 <input name="phone" required placeholder ="Ваше телефон" type="number">
                 <input name="email  " required placeholder ="Ваше E-mail" type="email">
