carousel 100% go next lecture

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <title>Run Smart</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" type="text/css" href="css/slick.css"/>
+<!--     <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/> -->
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -83,7 +85,19 @@
             </form>
         </div>
     </section>
+    <section class="carousel">
+        <div class="container">
+            <div class="carousel__inner">
+                <div><img src="img/fouth-section/first-slide.png" alt="first-slide" class="carousel_img"></div>
+                <div><img src="img/fouth-section/second-slide.png" alt="second-slide" class="carousel_img"></div>
+                <div><img src="img/fouth-section/third-slide.png" alt="third" class="carousel_img"></div>
+            </div>
+        </div>
+    </section>
 
-
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="js/slick.min.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
