--- a/src/index.html
+++ b/src/index.html
@@ -101,7 +101,24 @@
                 <li class="catalog__tab catalog__tab_active"><div>Для фитнеса</div></li>
                 <li class="catalog__tab"><div>для бега</div></li>
                 <li class="catalog__tab"><div>для триатлона</div></li>
-            </ul>    
+            </ul>
+            <div class="catalog__wrapper">
+                <div class="catalog-item">
+                    <div class="catalog-item__img"><img src="img/fifth-section/product-photo.png" alt="pulse"></div>
+                    <h3 class="catalog-item__title">Пульсометр Polar FT1</h3>
+                    <div class="catalog-item__desc">Для первых шагов в тренировках, основанных на сердечном ритме
+                        <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <span class="catalog-item__price catalog-item__price_old">4 750 UAH</span>
+                            <span class="catalog-item__price">4 500 UAH</span>
+                        </div>
+                        <div class="button button_product-buy">КУПИТЬ</div>
+                    </div>
+                </div>
+            </div>    
         </div>
     </section>
 
