some updtates product

--- a/src/index.html
+++ b/src/index.html
@@ -104,12 +104,20 @@
             </ul>
             <div class="catalog__wrapper">
                 <div class="catalog-item">
-                    <div class="catalog-item__img"><img src="img/fifth-section/product-photo.png" alt="pulse"></div>
-                    <h3 class="catalog-item__title">Пульсометр Polar FT1</h3>
-                    <div class="catalog-item__desc">Для первых шагов в тренировках, основанных на сердечном ритме
-                        <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                    <ul class="catalog-item__list">
+                        <li class="catalog-item__list-item">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                        <li class="catalog-item__list-item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                        <li class="catalog-item__list-item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                        <li class="catalog-item__list-item">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <a href="#" class="catalog-item__back">НАЗАД</a>
+                    </ul>
+                    <div class="catalog-item__content">
+                        <div class="catalog-item__img"><img src="img/fifth-section/product-photo.png" alt="pulse"></div>
+                        <h3 class="catalog-item__title">Пульсометр Polar FT1</h3>
+                        <div class="catalog-item__desc">Для первых шагов в тренировках, основанных на сердечном ритме
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
                     </div>
-                    <hr>
                     <div class="catalog-item__footer">
                         <div class="catalog-item__prices">
                             <span class="catalog-item__price catalog-item__price_old">4 750 UAH</span>
