--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
             </ul>
             <div class="catalog__wrapper">
                 <div class="catalog-item">
-                    <ul class="catalog-item__list catalog-item__list_active">
+                    <ul class="catalog-item__list">
                         <li class="catalog-item__list-item">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                         <li class="catalog-item__list-item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                         <li class="catalog-item__list-item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
