--- a/src/index.html
+++ b/src/index.html
@@ -102,6 +102,144 @@
                 <li class="catalog__tab"><div>для бега</div></li>
                 <li class="catalog__tab"><div>для триатлона</div></li>
             </ul>
+            <div class="catalog__wrapper catalog__wrapper_active">
+                <div class="catalog-item">
+                    <ul class="catalog-item__list">
+                        <li class="catalog-item__list-item">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                        <li class="catalog-item__list-item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                        <li class="catalog-item__list-item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                        <li class="catalog-item__list-item">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <a href="#" class="catalog-item__back">НАЗАД</a>
+                    </ul>
+                    <div class="catalog-item__content catalog-item__content_active">
+                        <div class="catalog-item__img"><img src="img/fifth-section/product-photo.png" alt="pulse"></div>
+                        <h3 class="catalog-item__title">Пульсометр Polar FT1</h3>
+                        <div class="catalog-item__desc">Для первых шагов в тренировках, основанных на сердечном ритме
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                    </div>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <span class="catalog-item__price catalog-item__price_old">4 750 UAH</span>
+                            <span class="catalog-item__price">4 500 UAH</span>
+                        </div>
+                        <div class="button button_product-buy">КУПИТЬ</div>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <ul class="catalog-item__list">
+                        <li class="catalog-item__list-item">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                        <li class="catalog-item__list-item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                        <li class="catalog-item__list-item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                        <li class="catalog-item__list-item">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <a href="#" class="catalog-item__back">НАЗАД</a>
+                    </ul>
+                    <div class="catalog-item__content catalog-item__content_active">
+                        <div class="catalog-item__img"><img src="img/fifth-section/product-photo.png" alt="pulse"></div>
+                        <h3 class="catalog-item__title">Пульсометр Polar FT1</h3>
+                        <div class="catalog-item__desc">Для первых шагов в тренировках, основанных на сердечном ритме
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                    </div>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <span class="catalog-item__price catalog-item__price_old">4 750 UAH</span>
+                            <span class="catalog-item__price">4 500 UAH</span>
+                        </div>
+                        <div class="button button_product-buy">КУПИТЬ</div>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <ul class="catalog-item__list">
+                        <li class="catalog-item__list-item">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                        <li class="catalog-item__list-item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                        <li class="catalog-item__list-item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                        <li class="catalog-item__list-item">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <a href="#" class="catalog-item__back">НАЗАД</a>
+                    </ul>
+                    <div class="catalog-item__content catalog-item__content_active">
+                        <div class="catalog-item__img"><img src="img/fifth-section/product-photo.png" alt="pulse"></div>
+                        <h3 class="catalog-item__title">Пульсометр Polar FT1</h3>
+                        <div class="catalog-item__desc">Для первых шагов в тренировках, основанных на сердечном ритме
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                    </div>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <span class="catalog-item__price catalog-item__price_old">4 750 UAH</span>
+                            <span class="catalog-item__price">4 500 UAH</span>
+                        </div>
+                        <div class="button button_product-buy">КУПИТЬ</div>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <ul class="catalog-item__list">
+                        <li class="catalog-item__list-item">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                        <li class="catalog-item__list-item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                        <li class="catalog-item__list-item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                        <li class="catalog-item__list-item">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <a href="#" class="catalog-item__back">НАЗАД</a>
+                    </ul>
+                    <div class="catalog-item__content catalog-item__content_active">
+                        <div class="catalog-item__img"><img src="img/fifth-section/product-photo.png" alt="pulse"></div>
+                        <h3 class="catalog-item__title">Пульсометр Polar FT1</h3>
+                        <div class="catalog-item__desc">Для первых шагов в тренировках, основанных на сердечном ритме
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                    </div>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <span class="catalog-item__price catalog-item__price_old">4 750 UAH</span>
+                            <span class="catalog-item__price">4 500 UAH</span>
+                        </div>
+                        <div class="button button_product-buy">КУПИТЬ</div>
+                    </div>
+                </div><div class="catalog-item">
+                    <ul class="catalog-item__list">
+                        <li class="catalog-item__list-item">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                        <li class="catalog-item__list-item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                        <li class="catalog-item__list-item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                        <li class="catalog-item__list-item">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <a href="#" class="catalog-item__back">НАЗАД</a>
+                    </ul>
+                    <div class="catalog-item__content catalog-item__content_active">
+                        <div class="catalog-item__img"><img src="img/fifth-section/product-photo.png" alt="pulse"></div>
+                        <h3 class="catalog-item__title">Пульсометр Polar FT1</h3>
+                        <div class="catalog-item__desc">Для первых шагов в тренировках, основанных на сердечном ритме
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                    </div>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <span class="catalog-item__price catalog-item__price_old">4 750 UAH</span>
+                            <span class="catalog-item__price">4 500 UAH</span>
+                        </div>
+                        <div class="button button_product-buy">КУПИТЬ</div>
+                    </div>
+                </div><div class="catalog-item">
+                    <ul class="catalog-item__list">
+                        <li class="catalog-item__list-item">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                        <li class="catalog-item__list-item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                        <li class="catalog-item__list-item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                        <li class="catalog-item__list-item">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <a href="#" class="catalog-item__back">НАЗАД</a>
+                    </ul>
+                    <div class="catalog-item__content catalog-item__content_active">
+                        <div class="catalog-item__img"><img src="img/fifth-section/product-photo.png" alt="pulse"></div>
+                        <h3 class="catalog-item__title">Пульсометр Polar FT1</h3>
+                        <div class="catalog-item__desc">Для первых шагов в тренировках, основанных на сердечном ритме
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                    </div>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <span class="catalog-item__price catalog-item__price_old">4 750 UAH</span>
+                            <span class="catalog-item__price">4 500 UAH</span>
+                        </div>
+                        <div class="button button_product-buy">КУПИТЬ</div>
+                    </div>
+                </div>
+            </div>
             <div class="catalog__wrapper">
                 <div class="catalog-item">
                     <ul class="catalog-item__list">
@@ -126,7 +264,78 @@
                         <div class="button button_product-buy">КУПИТЬ</div>
                     </div>
                 </div>
-            </div>    
+                <div class="catalog-item">
+                    <ul class="catalog-item__list">
+                        <li class="catalog-item__list-item">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                        <li class="catalog-item__list-item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                        <li class="catalog-item__list-item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                        <li class="catalog-item__list-item">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <a href="#" class="catalog-item__back">НАЗАД</a>
+                    </ul>
+                    <div class="catalog-item__content catalog-item__content_active">
+                        <div class="catalog-item__img"><img src="img/fifth-section/product-photo.png" alt="pulse"></div>
+                        <h3 class="catalog-item__title">Пульсометр Polar FT1</h3>
+                        <div class="catalog-item__desc">Для первых шагов в тренировках, основанных на сердечном ритме
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                    </div>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <span class="catalog-item__price catalog-item__price_old">4 750 UAH</span>
+                            <span class="catalog-item__price">4 500 UAH</span>
+                        </div>
+                        <div class="button button_product-buy">КУПИТЬ</div>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <ul class="catalog-item__list">
+                        <li class="catalog-item__list-item">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                        <li class="catalog-item__list-item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                        <li class="catalog-item__list-item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                        <li class="catalog-item__list-item">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <a href="#" class="catalog-item__back">НАЗАД</a>
+                    </ul>
+                    <div class="catalog-item__content catalog-item__content_active">
+                        <div class="catalog-item__img"><img src="img/fifth-section/product-photo.png" alt="pulse"></div>
+                        <h3 class="catalog-item__title">Пульсометр Polar FT1</h3>
+                        <div class="catalog-item__desc">Для первых шагов в тренировках, основанных на сердечном ритме
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                    </div>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <span class="catalog-item__price catalog-item__price_old">4 750 UAH</span>
+                            <span class="catalog-item__price">4 500 UAH</span>
+                        </div>
+                        <div class="button button_product-buy">КУПИТЬ</div>
+                    </div>
+                </div>
+            </div> 
+            <div class="catalog__wrapper">
+                <div class="catalog-item">
+                    <ul class="catalog-item__list">
+                        <li class="catalog-item__list-item">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                        <li class="catalog-item__list-item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                        <li class="catalog-item__list-item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                        <li class="catalog-item__list-item">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <a href="#" class="catalog-item__back">НАЗАД</a>
+                    </ul>
+                    <div class="catalog-item__content catalog-item__content_active">
+                        <div class="catalog-item__img"><img src="img/fifth-section/product-photo.png" alt="pulse"></div>
+                        <h3 class="catalog-item__title">Пульсометр Polar FT1</h3>
+                        <div class="catalog-item__desc">Для первых шагов в тренировках, основанных на сердечном ритме
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                    </div>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <span class="catalog-item__price catalog-item__price_old">4 750 UAH</span>
+                            <span class="catalog-item__price">4 500 UAH</span>
+                        </div>
+                        <div class="button button_product-buy">КУПИТЬ</div>
+                    </div>
+                </div>
+            </div> 
         </div>
     </section>
 
