all adaptive go next lecture

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
                 Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
             </div>
             <div class="advantages__item">
-                <span class="advantages_ico"><img src="img/second-section/cup.png" alt="cup"></span>
+                <span class="advantages_ico"><img src="img/second-section/shoe.png" alt="shoe"></span>
                 <h3 class="advantages__name">Учим бегать</h3>
                 Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в Украине - I LOVE RUNNING.
             </div>
@@ -336,6 +336,52 @@
                     </div>
                 </div>
             </div> 
+        </div>
+    </section>
+    <section class="reviews">
+        <div class="container">
+            <h2 class="reviews__title">отзывы клиентов</h2>
+            <div class="reviews__wrapper">
+                <div class="reviews-item">
+                    <span><img src="img/sixth-section/photo_1.png" alt="ava 1" class="reviews__img"></span>
+                    <div class="reviews-item__txt">
+                        <h3 class="reviews-item__username">
+                            Ирина Иванченко 
+                        </h3>
+                        <h4 class="reviews-item__sub">
+                            2 полумарафона
+                        </h4>
+                        Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.Новые цели - новый гаджет!
+    Спасибо, RunSmart! 
+                    </div>
+                </div>
+                <div class="reviews-item">
+                    <span><img src="img/sixth-section/photo_3.png" alt="ava 3" class="reviews__img"></span>
+                    <div class="reviews-item__txt">
+                        <h3 class="reviews-item__username">
+                            Юлия Дашкина
+                        </h3>
+                        <h4 class="reviews-item__sub">
+                            2 полумарафона
+                        </h4>
+                        Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!Спасибо!!!
+                    </div>
+                </div>
+                <div class="reviews-item">
+                    <span><img src="img/sixth-section/photo_2.png" alt="ava 2" class="reviews__img"></span>
+                    <div class="reviews-item__txt">
+                        <h3 class="reviews-item__username">
+                            Иван Сёмочкин
+                        </h3>
+                        <h4 class="reviews-item__sub">
+                            1 полумарафон
+                        </h4>
+                        Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд.С ними подготовился к своему первому полумарафону! Спасибо!!!
+                    </div>
+                </div>
+    
+            </div>
+
         </div>
     </section>
 
