all adaptive go next lecture

--- a/src/index.html
+++ b/src/index.html
@@ -384,6 +384,20 @@
 
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer__map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.3524742374248!2d37.64373443248317!3d55.76974990302967!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCDQoNC-0YHRgdC40Y8sIDEwNzA3OA!5e0!3m2!1sru!2snl!4v1671995447876!5m2!1sru!2snl" width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="footer__info">
+            <address class="footer__address">Украина, Мясницкий проезд, д.3с1</address>
+            <a href="tell:84999228974" class="footer__phone">8 (499) 922-89-74</a>
+            <div class="footer-social">
+                <span><img src="img/footer/facebook.svg" alt="facebook" class="footer-social__item"></span>
+                <span><img src="img/footer/instagram.svg" alt="instagram" class="footer-social__item"></span>
+                <span><img src="img/footer/pinterest.svg" alt="pinterest" class="footer-social__item"></span>
+            </div>
+        </div>
+    </footer>
 
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
