--- a/src/index.html
+++ b/src/index.html
@@ -398,6 +398,39 @@
             </div>
         </div>
     </footer>
+    <div class="overlay">
+        <div class="modal" id="consultation">
+            <div class="modal__close">&times</div>
+            <h3 class="modal__title">Просто заполните форму заявки</h3>
+            и мы перезвоним вам в течении 10 минут
+            <form action="#" class="feed-form feed-form_mr">
+                <input name="name" required placeholder ="Ваше имя" type="text">
+                <input name="phone" required placeholder ="Ваше телефон" type="number">
+                <input name="email  " required placeholder ="Ваше E-mail" type="email">
+                <button class="button button_submit">
+                    заказать кОНСУЛЬТАЦИЮ
+                </button>
+            </form>
+        </div>
+        <div class="modal" id="order">
+            <div class="modal__close">&times</div>
+            <h3 class="modal__title">Ваш заказ:</h3>
+            Пульсометр Polar FT1
+            <form action="#" class="feed-form feed-form_mr">
+                <input name="name" required placeholder ="Ваше имя" type="text">
+                <input name="phone" required placeholder ="Ваше телефон" type="number">
+                <input name="email  " required placeholder ="Ваше E-mail" type="email">
+                <button class="button button_submit">
+                    Купить
+                </button>
+            </form>
+        </div>
+        <div class="modal modal_mini" id="thanks">
+            <div class="modal__close">&times</div>
+            <h3 class="modal__title">Спасибо за вашу заявку!</h3>
+            Наш менеджер свяжется с вами в ближайшее время!
+        </div>
+    </div>
 
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
