scripted need to adaptived and some paddings

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="header__contacts">
                     <a href="tel:74999228974" class="header__phone">+7 (499) 922-89-74</a>
-                    <button class="button button_header">
+                    <button class="button button_header" data-modal="consultation">
                         заказать звонок
                     </button>
                 </div>
@@ -37,7 +37,7 @@
                     <div class="promo__icon"><span><img src="img/first-section/messages.png" alt="messages.png"></span>Ответим на все вопросы</div>
                 </div>
             <div class="promo__action">
-                <button class="button button_main">
+                <button data-modal="consultation" class="button button_main">
                     заказать звонок
                 </button>
                 <p>или <a href="#" class="promo__link">ПЕРЕЙТИ В КАТАЛОГ</a></p>
