--- a/src/index.html
+++ b/src/index.html
@@ -75,10 +75,10 @@
             <div class="consultation__desc">
                 Просто заполните форму заявки и мы перезвоним вам в течении 10 минут
             </div>
-            <form action="#" class="feed-form">
-                <input name="name" required placeholder ="Ваше имя" type="text">
-                <input name="phone" required placeholder ="Ваше телефон" type="number">
-                <input name="email  " required placeholder ="Ваше E-mail" type="email">
+            <form action="#" id="consultation-form" class="feed-form">
+                <input name="name" placeholder ="Ваше имя" type="text">
+                <input name="phone" placeholder ="Ваше телефон" type="number">
+                <input name="email" placeholder ="Ваше E-mail" type="email">
                 <button class="button button_submit">
                     заказать кОНСУЛЬТАЦИЮ
                 </button>
@@ -403,10 +403,10 @@
             <div class="modal__close">&times</div>
             <h3 class="modal__title">Просто заполните форму заявки</h3>
             и мы перезвоним вам в течении 10 минут
-            <form action="#" class="feed-form feed-form_mr">
-                <input name="name" required placeholder ="Ваше имя" type="text">
-                <input name="phone" required placeholder ="Ваше телефон" type="number">
-                <input name="email  " required placeholder ="Ваше E-mail" type="email">
+            <form action="#" id="test-form" class="feed-form feed-form_mr">
+                <input name="name" placeholder ="Ваше имя" type="text">
+                <input name="phone" placeholder ="Ваше телефон" type="number">
+                <input name="email" placeholder ="Ваше E-mail" type="email">
                 <button class="button button_submit">
                     заказать кОНСУЛЬТАЦИЮ
                 </button>
@@ -417,9 +417,9 @@
             <h3 class="modal__title">Ваш заказ:</h3>
             Пульсометр Polar FT1
             <form action="#" class="feed-form feed-form_mr">
-                <input name="name" required placeholder ="Ваше имя" type="text">
-                <input name="phone" required placeholder ="Ваше телефон" type="number">
-                <input name="email  " required placeholder ="Ваше E-mail" type="email">
+                <input name="name" placeholder ="Ваше имя" type="text">
+                <input name="phone" placeholder ="Ваше телефон" type="number">
+                <input name="email" placeholder ="Ваше E-mail" type="email">
                 <button class="button button_submit">
                     Купить
                 </button>
@@ -432,10 +432,11 @@
         </div>
     </div>
 
-
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="js/slick.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.validate.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
