--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
             </div>
             <form action="#" id="consultation-form" class="feed-form">
                 <input name="name" placeholder ="Ваше имя" type="text">
-                <input name="phone" placeholder ="Ваше телефон" type="number">
+                <input name="phone" placeholder ="Ваше телефон">
                 <input name="email" placeholder ="Ваше E-mail" type="email">
                 <button class="button button_submit">
                     заказать кОНСУЛЬТАЦИЮ
@@ -403,9 +403,9 @@
             <div class="modal__close">&times</div>
             <h3 class="modal__title">Просто заполните форму заявки</h3>
             и мы перезвоним вам в течении 10 минут
-            <form action="#" id="test-form" class="feed-form feed-form_mr">
+            <form action="#" class="feed-form feed-form_mr">
                 <input name="name" placeholder ="Ваше имя" type="text">
-                <input name="phone" placeholder ="Ваше телефон" type="number">
+                <input name="phone" placeholder ="Ваше телефон">
                 <input name="email" placeholder ="Ваше E-mail" type="email">
                 <button class="button button_submit">
                     заказать кОНСУЛЬТАЦИЮ
@@ -418,7 +418,7 @@
             Пульсометр Polar FT1
             <form action="#" class="feed-form feed-form_mr">
                 <input name="name" placeholder ="Ваше имя" type="text">
-                <input name="phone" placeholder ="Ваше телефон" type="number">
+                <input name="phone" placeholder ="Ваше телефон">
                 <input name="email" placeholder ="Ваше E-mail" type="email">
                 <button class="button button_submit">
                     Купить
@@ -437,6 +437,8 @@
     <script type="text/javascript" src="js/slick.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/jquery.validate.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
+    <script src="jquery.maskedinput.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
