--- a/src/index.html
+++ b/src/index.html
@@ -439,6 +439,7 @@
     <script src="js/jquery.validate.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
     <script src="jquery.maskedinput.js" type="text/javascript"></script>
+<!--     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> -->
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
