--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <section class="promo">
+    <section class="promo" id="promo">
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
@@ -431,7 +431,7 @@
             Наш менеджер свяжется с вами в ближайшее время!
         </div>
     </div>
-
+    <a href="#promo" class="scroll-up"><img src="img/icons/circle-chevron-up-solid.svg" alt="scroll-up"></a>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="js/slick.min.js"></script>
