--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
                 Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
             </div>
             <div class="advantages__item">
-                <span class="advantages_ico"><img src="img/second-section/heart.png" alt="heart"></span>
+                <span class="advantages_ico advantages_ico_heart"><img src="img/second-section/heart.png" alt="heart"></span>
                 <h3 class="advantages__name">Заботимся о здоровье</h3>
                 Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
             </div>
